# trader

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  AWS_DEPLOYMENT_SUMMARY.txt  CHANGELOG.md  DEPLOY_AWS.md  DEPLOY_AWS_QUICKSTART.md  DOCKERFILE_ANALYSIS.md  Dockerfile  Dockerfile.optimized  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  deploy-aws-quick.sh  top-combos.s3.json
.cabal/: config
.cabal/store/ghc-9.4.8/OnTpl-0.4.2.1-9cd96cae/: cabal-hash.txt
.cabal/store/ghc-9.4.8/Only-0.1-1670b868/: cabal-hash.txt
.cabal/store/ghc-9.4.8/QckChck-2.16.0.0-2a5db76a/: cabal-hash.txt
.cabal/store/ghc-9.4.8/SHA-1.6.4.4-3d166705/: cabal-hash.txt
.cabal/store/ghc-9.4.8/SttVr-1.2.2-41d1017b/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bfnctrs-5.6.3-d1e10fd2/: cabal-hash.txt
.cabal/store/ghc-9.4.8/blz-bldr-0.4.4.1-2533e3af/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bs-rphns-0.9.4-98e58666/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bs16-bytstrng-1.0.2.0-32450f24/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bs64-bytstrng-1.2.1.0-27d3adad/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bsb-http-chnkd-0.0.0.4-0c18b575/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bsmnt-0.0.16-62ea47ca/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bytrdr-1.0.4-cc470617/: cabal-hash.txt
.cabal/store/ghc-9.4.8/bytstrng-bldr-0.10.8.2.0-2d18c6a0/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cbrg-0.2.10.0-a263a54e/: cabal-hash.txt
.cabal/store/ghc-9.4.8/chrctr-ps-0.1-efb6e8b9/: cabal-hash.txt
.cabal/store/ghc-9.4.8/ck-0.5.1-a3929a6b/: cabal-hash.txt
.cabal/store/ghc-9.4.8/clr-2.3.6-b26c82ae/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cmnd-5.0.10-640722d8/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cntrvrnt-1.5.6-8e0d0196/: cabal-hash.txt
.cabal/store/ghc-9.4.8/crl-0.5.8.3-cdc34e90/: cabal-hash.txt
.cabal/store/ghc-9.4.8/crypthsh-md5-0.11.101.0-0c1d0a37/: cabal-hash.txt
.cabal/store/ghc-9.4.8/crypthsh-sh1-0.11.101.0-48c70763/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-1.0.6-150359d9/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-cnnctn-0.3.2-3032a3d5/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-x509-1.7.7-19626287/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-x509-str-1.6.14-f2ed2d6d/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-x509-systm-1.6.8-2f562daf/: cabal-hash.txt
.cabal/store/ghc-9.4.8/cryptn-x509-vldtn-1.6.14-f1a1eb23/: cabal-hash.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: BNBUSDT-5m-2020-06_full.csv  BNBUSDT-5m-2020-06_train50.csv  BNBUSDT-5m-latest.csv  sample_prices.csv
deploy/: ensure-bot-running.sh
deploy/aws/: README.md  create-ecr-repo.sh  deploy-ui.sh  set-app-runner-single-instance.sh
haskell/: trader.cabal
haskell/app/: Main.hs  MergeTopCombosMain.hs  OptimizeEquityMain.hs
haskell/app/Trader/: Binance.hs  BinanceIntervals.hs  Cache.hs  Coinbase.hs  Duration.hs  Http.hs  Kalman3.hs  KalmanFusion.hs  Kraken.hs  LSTM.hs  LstmPersistence.hs  MarketContext.hs  Method.hs  Metrics.hs  Normalization.hs  OnlineStats.hs  Optimization.hs  Platform.hs  Poloniex.hs  Predictors.hs  S3.hs  SensorVariance.hs  Split.hs  Symbol.hs  Text.hs  Trading.hs
haskell/app/Trader/App/: Args.hs
haskell/app/Trader/Optimizer/: Json.hs  Merge.hs  Optimize.hs  Random.hs
haskell/app/Trader/Predictors/: Conformal.hs  Features.hs  GBDT.hs  HMM.hs  Quantile.hs  TCN.hs  Transformer.hs  Types.hs
haskell/bench/: BenchMain.hs
haskell/scripts/: merge_top_combos.py  optimize_equity.py  rollup_performance.sh
haskell/test/: TestMain.hs
haskell/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
haskell/web/public/: top-combos.json  trader-config.js
haskell/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
haskell/web/src/app/: apiTarget.ts  appHelpers.ts  comboMarket.ts  configLayout.ts  configTypes.ts  constants.ts  dataLog.ts  formState.ts  utils.ts
haskell/web/src/components/: BacktestChart.tsx  BotStateChart.tsx  CollapsibleCard.tsx  ConfigDock.tsx  InfoPopover.tsx  LineChart.tsx  LiveVisuals.tsx  OptimizerCombosPanel.tsx  PredictionDiffChart.tsx  TelemetryChart.tsx  TopCombosChart.tsx
haskell/web/src/lib/: api.ts  clipboard.ts  deployConfig.ts  format.ts  storage.ts  tenant.ts  types.ts
haskell/web/test/: utils.test.mjs
tmp/: Trading_Strategies.txt  binance_BNBUSDT_5m_10000_no_time.csv  binance_BNBUSDT_5m_3000.csv  binance_BNBUSDT_5m_3000_no_time.csv  binance_BTCUSDT_1h_1000.csv  binance_BTCUSDT_1h_1000_no_time.csv  binance_BTCUSDT_5m_1000.csv  binance_BTCUSDT_5m_10000_no_time.csv  binance_BTCUSDT_5m_1000_no_time.csv  binance_BTCUSDT_5m_3000.csv  binance_BTCUSDT_5m_3000_no_time.csv  binance_ETHUSDT_1h_1000.csv  binance_ETHUSDT_1h_1000_no_time.csv  binance_ETHUSDT_5m_10000_no_time.csv  binance_ETHUSDT_5m_3000.csv  binance_ETHUSDT_5m_3000_no_time.csv  bnbusdt_5m_2020_06_last1000_no_time.csv  bnbusdt_5m_2020_06_last3000_no_time.csv  btc_debug.json  btc_repro.json  btc_repro_no_tri.json  optimize_equity_binance_btc_1h.jsonl  optimize_equity_binance_btc_1h_fixed.jsonl  optimize_equity_binance_btc_1h_fixed2.jsonl  optimize_equity_binance_btc_1h_loose.jsonl  optimize_equity_binance_btc_1h_method11.jsonl  optimize_equity_binance_btc_1h_nosweep.jsonl  optimize_equity_binance_btc_1h_trilayer.jsonl  optimize_equity_binance_btc_1h_trilayer_net.jsonl  optimize_equity_binance_btc_1h_ultra.jsonl  optimize_equity_bnb_5m_trilayer_csv_no_time_40_filtered.jsonl  optimize_equity_bnb_5m_trilayer_csv_no_time_40_tinythr.jsonl  optimize_equity_bnb_5m_trilayer_csv_no_time_40_tinythr_ex005.jsonl  optimize_equity_bnb_5m_trilayer_csv_no_time_50.jsonl  optimize_equity_bnb_5m_trilayer_nosweep_3000_60.jsonl  optimize_equity_bnb_5m_trilayer_nosweep_50.jsonl  optimize_equity_bnbusdt_5m_trilayer_noise_loose_10000_200_fast.jsonl  optimize_equity_bnbusdt_5m_trilayer_noise_loose_10000_60_fast.jsonl  optimize_equity_bnbusdt_5m_trilayer_noise_loose_10000_mixed_10.jsonl  optimize_equity_bnbusdt_5m_trilayer_noise_loose_10000_mixed_60.jsonl  (+69 more)
(+356 files in other folders)
