name:                trader
version:             0.1.0.0
synopsis:            LSTM-based price predictor and simple trading simulator (Haskell port)
category:            Finance
build-type:          Simple
cabal-version:       >=1.10

executable trader-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Trader.Binance
                     , Trader.Cache
                     , Trader.Coinbase
                     , Trader.App.Args
                     , Trader.BinanceIntervals
                     , Trader.Duration
                     , Trader.Http
                     , Trader.KalmanFusion
                     , Trader.Kalman3
                     , Trader.Kraken
                     , Trader.LSTM
                     , Trader.LstmPersistence
                     , Trader.Metrics
                     , Trader.Method
                     , Trader.MarketContext
                     , Trader.Normalization
                     , Trader.Optimization
                     , Trader.OnlineStats
                     , Trader.Optimizer.Json
                     , Trader.Poloniex
                     , Trader.Predictors
                     , Trader.Predictors.Types
                     , Trader.Predictors.Features
                     , Trader.Predictors.GBDT
                     , Trader.Predictors.TCN
                     , Trader.Predictors.Transformer
                     , Trader.Predictors.Quantile
                     , Trader.Predictors.Conformal
                     , Trader.Predictors.HMM
                     , Trader.Platform
                     , Trader.SensorVariance
                     , Trader.Split
                     , Trader.Symbol
                     , Trader.S3
                     , Trader.Text
                     , Trader.Trading
                     , Paths_trader
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <4.20
                     , aeson >=1.5
                     , bytestring >=0.10
                     , base16-bytestring
                     , cassava >=0.5
                     , case-insensitive
                     , cryptonite
                     , directory
                     , filepath
                     , memory
                     , http-client
                     , http-client-tls
                     , http-types
                     , websockets
                     , wuss
                     , containers
                     , wai
                     , warp
                     , unordered-containers
                     , optparse-applicative >=0.17
                     , random >=1.2
                     , process
                     , ad >=4.4
                     , text
                     , time
                     , postgresql-simple >=0.6 && <0.7
                     , uuid
                     , vector >=0.12
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if os(darwin)
    ghc-options:       -optl-Wl,-no_warn_duplicate_libraries

executable optimize-equity
  hs-source-dirs:      app
  main-is:             OptimizeEquityMain.hs
  other-modules:       Trader.BinanceIntervals
                     , Trader.Duration
                     , Trader.Platform
                     , Trader.Optimizer.Json
                     , Trader.Optimizer.Optimize
                     , Trader.Optimizer.Random
                     , Trader.Symbol
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <4.20
                     , aeson >=1.5
                     , bytestring >=0.10
                     , base16-bytestring
                     , containers
                     , cryptonite
                     , directory
                     , filepath
                     , memory
                     , optparse-applicative >=0.17
                     , process
                     , scientific
                     , text
                     , time
                     , vector >=0.12
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if os(darwin)
    ghc-options:       -optl-Wl,-no_warn_duplicate_libraries

executable merge-top-combos
  hs-source-dirs:      app
  main-is:             MergeTopCombosMain.hs
  other-modules:       Trader.Optimizer.Json
                     , Trader.Optimizer.Merge
                     , Trader.Symbol
                     , Trader.Duration
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <4.20
                     , aeson >=1.5
                     , bytestring >=0.10
                     , base16-bytestring
                     , containers
                     , cryptonite
                     , directory
                     , filepath
                     , memory
                     , optparse-applicative >=0.17
                     , scientific
                     , text
                     , time
                     , vector >=0.12
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if os(darwin)
    ghc-options:       -optl-Wl,-no_warn_duplicate_libraries

test-suite trader-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             TestMain.hs
  other-modules:       Trader.Binance
                     , Trader.Cache
                     , Trader.Coinbase
                     , Trader.App.Args
                     , Trader.BinanceIntervals
                     , Trader.Duration
                     , Trader.Http
                     , Trader.KalmanFusion
                     , Trader.Kalman3
                     , Trader.Kraken
                     , Trader.LSTM
                     , Trader.LstmPersistence
                     , Trader.Metrics
                     , Trader.Method
                     , Trader.MarketContext
                     , Trader.Normalization
                     , Trader.Optimization
                     , Trader.OnlineStats
                     , Trader.Poloniex
                     , Trader.Predictors
                     , Trader.Predictors.Types
                     , Trader.Predictors.Features
                     , Trader.Predictors.GBDT
                     , Trader.Predictors.TCN
                     , Trader.Predictors.Transformer
                     , Trader.Predictors.Quantile
                     , Trader.Predictors.Conformal
                     , Trader.Predictors.HMM
                     , Trader.Platform
                     , Trader.SensorVariance
                     , Trader.Split
                     , Trader.Symbol
                     , Trader.Text
                     , Trader.Trading
                     , Paths_trader
  default-language:    Haskell2010
  if os(darwin)
    ghc-options:       -optl-Wl,-no_warn_duplicate_libraries
  build-depends:       base >=4.14 && <4.20
                     , aeson >=1.5
                     , bytestring >=0.10
                     , base16-bytestring
                     , cassava >=0.5
                     , cryptonite
                     , directory
                     , filepath
                     , memory
                     , http-client
                     , http-client-tls
                     , http-types
                     , containers
                     , unordered-containers
                     , optparse-applicative >=0.17
                     , random >=1.2
                     , process
                     , ad >=4.4
                     , text
                     , time
                     , vector >=0.12

benchmark trader-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench, app
  main-is:             BenchMain.hs
  other-modules:       Trader.Binance
                     , Trader.Cache
                     , Trader.Coinbase
                     , Trader.App.Args
                     , Trader.BinanceIntervals
                     , Trader.Duration
                     , Trader.Http
                     , Trader.KalmanFusion
                     , Trader.Kalman3
                     , Trader.Kraken
                     , Trader.LSTM
                     , Trader.LstmPersistence
                     , Trader.Metrics
                     , Trader.Method
                     , Trader.MarketContext
                     , Trader.Normalization
                     , Trader.Optimization
                     , Trader.OnlineStats
                     , Trader.Poloniex
                     , Trader.Predictors
                     , Trader.Predictors.Types
                     , Trader.Predictors.Features
                     , Trader.Predictors.GBDT
                     , Trader.Predictors.TCN
                     , Trader.Predictors.Transformer
                     , Trader.Predictors.Quantile
                     , Trader.Predictors.Conformal
                     , Trader.Predictors.HMM
                     , Trader.Platform
                     , Trader.SensorVariance
                     , Trader.Split
                     , Trader.Symbol
                     , Trader.Text
                     , Trader.Trading
                     , Paths_trader
  default-language:    Haskell2010
  if os(darwin)
    ghc-options:       -optl-Wl,-no_warn_duplicate_libraries
  build-depends:       base >=4.14 && <4.20
                     , aeson >=1.5
                     , bytestring >=0.10
                     , base16-bytestring
                     , cassava >=0.5
                     , cryptonite
                     , directory
                     , filepath
                     , memory
                     , http-client
                     , http-client-tls
                     , http-types
                     , containers
                     , unordered-containers
                     , optparse-applicative >=0.17
                     , random >=1.2
                     , process
                     , ad >=4.4
                     , text
                     , time
                     , vector >=0.12
